--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Hello everyone, Welcome to come here. This is my official portfolio website to show<br />
           my details and work experience in field of web development.
         </p>
-        <a href="https://drive.google.com/file/d/1jSQp5qYpbeU1JY3MmLICp-TGxHUeW_Ld/view?usp=sharing">Download CV  <i class="fa-solid fa-file-arrow-down"></i></a>
+        <a href="https://drive.google.com/file/d/1sKGMTpE40Vdqls0GPHIf4I0O4rIBd45t/view?usp=share_link">Download CV  <i class="fa-solid fa-file-arrow-down"></i></a>
       </div>
     </section>
 
