--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <div class="nav2">
       <i class="fa-solid fa-austral-sign"></i>
-      <h2>Unusualperson Portfolio</h2>
+      <h2>My Portfolio</h2>
     </div>
 
     <section class="sec1">
@@ -63,7 +63,7 @@
           <td><span>#3</span></td>
           <td>Fitness Point website</td>
           <td>
-            <a href="https://mdaman999.github.io/unusualperson-fitness-point/">Try it</a>
+            <a href="https://mdaman999.github.io/Fitness-point/">Try it</a>
           </td>
         </tr>
 
