--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           Hello everyone, Welcome to come here. This is my official portfolio website to show<br />
           my details and work experience in field of web development.
         </p>
-        <a href="https://drive.google.com/file/d/1LOwSAEZaXJA6yX_9oAx_wiU_Lk_tTRGD/view?usp=drive_link">Download CV  <i class="fa-solid fa-file-arrow-down"></i></a>
+        <a href="https://drive.google.com/file/d/1IEYNqN8UnLxv4etTpg4uKqnCRs8ReKH2/view?usp=sharing">Download CV  <i class="fa-solid fa-file-arrow-down"></i></a>
       </div>
     </section>
 
     <section class="sec2">
-      <h1>My All Project are Mention here</h1>
+      <h1>Some practice in front-end development</h1>
       <table>
         <tr>
           <th><span>SR.NO</span></th>
@@ -47,7 +47,7 @@
 
         <tr>
           <td><span>#1</span></td>
-          <td>Bloging website</td>
+          <td style="color: gray;">Bloging website</td>
           <td>
             <a href="https://myblogingwebsite.herokuapp.com/">Tryit</a>
           </td>
@@ -55,7 +55,7 @@
 
         <tr>
           <td><span>#2</span></td>
-          <td>Chat web Application</td>
+          <td style="color: gray;">Chat web Application</td>
           <td><a href="https://unusualchatapp.herokuapp.com/">Try it</a></td>
         </tr>
 
