--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     <section class="sec2">
-      <h1>Some practice in front-end development</h1>
+      <h1>Some practice in front-end development as below:</h1>
       <table>
         <tr>
           <th><span>SR.NO</span></th>
